--- a/ProyectoFinal/GUI/InsertarUsuario.resx
+++ b/ProyectoFinal/GUI/InsertarUsuario.resx
@@ -118,6 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAXJJREFUWEft1jlLxUAYheGoWCsW7p2iiLiiIoKI/1Z/gJ1g544I4l6JqLjvtb4n
+        3A9GScw2CRb3wMNlwiXfKTLJBPVUnIbab2yWsIa2cOU3Q7jCcriKyQ6+sAefJYZxC917XRfi0okT+Cwx
+        ijvonodox5/pgq8SY3hA6uEWlThFkRITeITucYQOZEo38paYwhNyD7eoxBmylJjBMwoPt/TgHGlKzOIV
+        +u8x9FB7iVtiQxciMoc3eB9u6YV2x0G4+pl5vEPD9R/vwy2NNW4W8IHSh0dlEZ+w4dq+lUVPuwaLtmul
+        w6fxAiuwi1ZUkknYPtfTbrtjG6WXGIe9Xm2raXe4JVpQSvRVsw/L731eeokR3CNquKW0EjpM2Pc86Q3n
+        vYSOUXaSSRpucUtsIXeJQdwgy3BL4RIDuEae4ZbcJfqh02uR4Ra3xCYSS/ThEj6GW1KXaMYFfA63uCVW
+        dSEqTdCJZx8+h1tUQke0lXBVz/9IEHwDOUSG4RhnoLwAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -127,6 +139,46 @@
         gFjiBEZdwfQnCJrAuDp2/QPiuoVx8gxYQ1s4rhkSVYH2FBQHyEFuuBYG0K7aKRIl74EXhBfWyqCN4EEe
         kLjgm3DXAbblMYd8rycTaXSBJ8iiXzIR0RGmGPqjlDpDHzf+KLpjdP8+7i+5Ei6XK5Tn/QLWubEfkL1k
         GwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAB/tJREFUWEfV
+        l2tQlOcVx6VGG9MxKiIoiJd8SDvt1GTqB51MjG06VqfTNjNpNbVVoyHhohBARAVFvCtaFE2nUUhMOuCi
+        K0FFKbddYGVXYFluy30X1l1AWHZhb1x2V4F/z/O+r9x0HO0kH3qcP6us+/z+5zznnBem/d/G5cuXZ8jl
+        8tlMYrF41saNG6cLb/1woVKpljRpNH/R6duPGwztYkNHh6y9vUNhaO+QGAwdaTq9/qBWq12vUCi8hY98
+        P1FdXf82HX6yvaOzvltX5e5Vi2FVJMAu3QNH/i7YJHthUZyDSX0LD9vUAw/0+nsaTVtkSUnJEuGI/y3C
+        wsJ+TOBoAjf21mXCkRcC57/fguuiF1xnXofz1BwMHZ+LwaOCEnzRn/wu+nJj0dVQjDadrrCxsfGvdJQH
+        f+JLhEwmW96q031h1JaOOqSRcKcshTtx9jj4BAGPzcPg4XkYOOSJ/gOecMTMh33vfDhiPWFPWgVz3kno
+        dG1WjaY1no58hT/5BeJmbq4/ub9qrr+Foe824NHF2XCfex2us3PgTJiDfoIrv4lCfeZp1H+XgMbrh2GP
+        84FjPzPgBdseUqQXGfKCWRwOQ3M1Gpubj9PRL9SoM7VtbefN9bcxdON9PEoS4P8gnSEDp+fCfnweGlRy
+        9FkssJCsXQ/QH+9HBrxgjyZ41AJYI0mfe9PfvWFKDcaDZvVoXUPDXjr/+dfR1NQS1qVTjwze/GAM7k4c
+        z955igwcnYfGKgVsVitsNhtsRj36D/nBvk8wsJvgEaQwb1h2kSK80X19H5qaNVq5vOx3AurpyMnJ+Wlb
+        m67CVnQQ7iQCMzjLfAKc3b3tyDw0Vd+H3W6Hw+GAo6cdjrjFQvkX8AbCCRzmQwZ80BdMr7uXoiM/BTVq
+        tYh2xiwBOSk81Gr1/p4mKZxfLhHAQtmfwE+SqOtthz3RXFOG/v5+DAwMYMDcCcdBMiCU3xbpzZXfEkrw
+        naSghegNXAhj0ka0qKvsxcXyPwnM8UgRiXw0Wm2JRRrHZczALgY+PRFOXU/lt1LXa2rLMTg4yKvvIRwH
+        yMCT7KnkFip/H8s+hOBkwPwpvYYuhSHvCpQq1ZeEnNyQuRLJbwyaWttA8ls8dCKYyj50jM06P3bWOE9o
+        1Uo4nU5elm7YYxePNx8r/5Psg/nszQGLyMQidKZ8TtdQp05OTl4soLnwuH+/LKKrXoqhMws4qINmnDUb
+        u28bQW3xnlzmDN5D46WtU8HtdnNy2nrQu88fJsrcRKXvIXgPwY0E7w5cBCOBzZ8sgmnHInQfXoeGSqX1
+        xo0bawQ2F9OpLBe7lSLKlLIkFabsR2t9BYGUXMPVVdxDTVkRKhVS1CrlsFP3P378mJPL5aT3ZCgryp2i
+        PE611y7wBj4mMxEr0KyQPMrMvL1ZYHMxQ1VVnW689y8MHqFSU9blGUljAKbhx8MYHn6iEYwwjUzQ6ChG
+        p4r+sHjUpIBpuy96tvnCGPQmWmTZuH3nTihxx3bCTJWqUmwsvEhrlV+tyowLkwCjTFMA9EVAPD/czMDH
+        ZGArGfiMDBTdxa2srEjijhmYQT3wTZfsK/QfnM+p8noCRgYtnEanaHiANPxYOJ75IJODNozQ9yepn5er
+        Ko/LvmeLL7pDfoEGWc6wWJwRSNwxA9MLCqQn2stv0jx78w+VAwu55cLpII0YGzPqdHuMP3r3+qNDWy/g
+        wcGt0W/CEr4MfWHL0LuLtHM5zMGkwDdgClhGcD8Y/+6Hh3vWoFYhG0pOvvKBwObCQyQSbWmtLXXZTv4c
+        DrZSmWizcaIFY2cPGLZkaM5NNGb6phoBTwYoW0v40vGRo5lnY2fa4TteeoIz6U9tRXlpWWd8fPzbApuP
+        mJiYFVVVNQ960oIF4AJ+sTCoALaxGadR66Elo2+cbIDLnOC9Y3DW9Tycy/5vzMBiaFITkC+RFqxevdpT
+        QI/FTwokkquGwiuw7fMdA/JQfrlwC4bNOW24qQa4srN5nwjn7l2Ab/ZDZ+R7UMvyR9LTr8cS76lHs8el
+        S5c+qq1UWY0p2wg2DuX2Onuy0YJhDxdjyBQD1Gi9IXTfwrJ5Fty4xR/ar+NRICmqCQgIWSEwn4q5d7Nz
+        0tpkYpiPvzMJyj3V2GoluJF2+1QD5qDl3Kw/VXYGJxkO/Rk1JcUjqVfT44gzk8c9I6g53i8qltXoM8+g
+        L2o5B+REDcY1GcG7qdT6ploBzxswffYGn/Uz4O2xG9CQfRUZGZmZnp6ek54Bz4oZiYlJOwqLitv0oiMw
+        7/kZQX34BhOazEj33Hnrn3Aps+Aqz4LzXjpMn4yP2lR4Y3YqcnPzldTov6XzX+gH1NfOJibuLJBINdo7
+        l9B1bD2ZYA1GHU73bGb3vJ2/a9NY1sKoCWB25/qjm9FwV4Ts/+SUnz179kM696V+eXmNPrT1zt2c0gZZ
+        LnRf7UVX9CpaKn6TG20inNS9bRnaYzag5duTqFDI3Wmi9IyAoKBf03kv/lPxhHhlzZo1v0pO+TopL7+g
+        tbY4b6Ql/RwenA9CR+x6Gqt30Bm2ml7fhSHuj2i9GIGmG5ehkkndmTezKi5c+OIAncF+OXmhsj8vZm/a
+        tOm98+cvnLh2TSyVSAoNpcVFDpWs0KUqkriURZIheXGxlUxqU9NEWacSEqJXrlz5S/rcq/zHv794ddas
+        Wb7r1v1+VUBg4IcREbs/jYqKDg4NDd++deuOP6xdu5atVy/SDO5//8DBysqaiulHwr9fMqZN+y96p5Hz
+        1rSaKgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
