--- a/ProyectoFinal/GUI/MenuAdmin.resx
+++ b/ProyectoFinal/GUI/MenuAdmin.resx
@@ -192,68 +192,68 @@
   </data>
   <data name="btnAccesorios.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAKwSURBVFhHtZY7iFNBFIaDFipqIywua+6DO+NGuXcmrJWr
-        NpaKIoI2goKWgg9sRVyws1q0sFRBrQRBrbXxVUgqRVSw8QE2NgurhaDn5P7nPnaSYLyTDw6Ef/77z8lM
-        7mRa49Juz6+LlLkUKtOjWkL1WOMx2CZDpLJdoco+0IR/BhU18Z49sPtlS9KdpUmWKxPSN7fP8uqvgujL
-        7MVjvji6OlDmZTmJvTGVphsw2OLPrFWaeEHyqnzUA1Fi9hfhSfYQsgOPiY+fgdwc2verRfCIPQ5Vult8
-        /Azk5tCP654Eb7Z2PWQHHhNfoM1dyM0JdXZfgiENRXz8DKTxoIe/rgyoNjCwtD0Ca9nA4PoM23DIlL9q
-        k2lgCbbBaK3XVMw3Idcb4M8rKtZ2J6zVBr6UHvNOdH6lYXWJ43RajIGyFyE3/g1wlujtdroJsku0Ndte
-        BKjsDOTmDWh7utBnTQLZJT/rYVT2BOQWLzHvc3WvhyG+6rbQoXRMciNtd0B2oZPsgBjpPT4EuTF0juwr
-        GlDpXsgutGzH/8k4JpE282VudhiyC+372cI4aqnGJI7NNskNEnMSsgttwWUxtlWqITem+naFiT0P2YVW
-        YFGM03puCnJjaueLtguQXaiB22LkhyB7gTJxmckWIblQd4/QwC9I3qDMb8guTlgHXK/Y9B2SNyjzLWfT
-        K/kAkouYqD5C8gZlPudsuto9heRCBlmm15C8QZmPkd2D5EKDP3OTfQLJG/SPeKefnZhPkOrEcbwWHY7e
-        p/+Elv468n9AqhN05makAapbkL1BDVxB9m9IdULdTSsNXIPsDfpzuyD5nU5nI+SSMOnuEQN3C9kbUZKd
-        kvwZlQWQS+gQOigGqjf9S4jHojvBK8mnG1KGaUv4AlJpYLJFq41pS+hf6txA8ySKLj75rK3WX2PRt3Lx
-        9xIJAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAArBJREFUWEe1ljuIU0EUhoMWKmojLC5r7oM740a5dyaslas2looigjaCgpaCD2xF
+        XLCzWrSwVEGtBEGttfFVSCpFVLDxATY2C6uFoOfk/uc+dpJgvJMPDoR//vvPyUzuZFrj0m7Pr4uUuRQq
+        06NaQvVY4zHYJkOksl2hyj7QhH8GFTXxnj2w+2VL0p2lSZYrE9I3t8/y6q+C6MvsxWO+OLo6UOZlOYm9
+        MZWmGzDY4s+sVZp4QfKqfNQDUWL2F+FJ9hCyA4+Jj5+B3Bza96tF8Ig9DlW6W3z8DOTm0I/rngRvtnY9
+        ZAceE1+gzV3IzQl1dl+CIQ1FfPwMpPGgh7+uDKg2MLC0PQJr2cDg+gzbcMiUv2qTaWAJtsForddUzDch
+        1xvgzysq1nYnrNUGvpQe8050fqVhdYnjdFqMgbIXITf+DXCW6O12ugmyS7Q1214EqOwM5OYNaHu60GdN
+        AtklP+thVPYE5BYvMe9zda+HIb7qttChdExyI213QHahk+yAGOk9PgS5MXSO7CsaUOleyC60bMf/yTgm
+        kTbzZW52GLIL7fvZwjhqqcYkjs02yQ0ScxKyC23BZTG2VaohN6b6doWJPQ/ZhVZgUYzTem4KcmNq54u2
+        C5BdqIHbYuSHIHuBMnGZyRYhuVB3j9DAL0jeoMxvyC5OWAdcr9j0HZI3KPMtZ9Mr+QCSi5ioPkLyBmU+
+        52y62j2F5EIGWabXkLxBmY+R3YPkQoM/c5N9Askb9I94p5+dmE+Q6sRxvBYdjt6n/4SW/jryf0CqE3Tm
+        ZqQBqluQvUENXEH2b0h1Qt1NKw1cg+wN+nO7IPmdTmcj5JIw6e4RA3cL2RtRkp2S/BmVBZBL6BA6KAaq
+        N/1LiMeiO8EryacbUoZpS/gCUmlgskWrjWlL6F/q3EDzJIouPvmsrdZfY9G3cvH3EgkAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="btnLibros.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAARcSURBVGhD7VhtTFtVGC6SjBHQ6ZZoNkwYjs97b8uPRZ2M
-        e29hXzBd771lpVAKAyyFDR0t6OSrsA8cbBkkA7NgZgywZVtiZCYmLlFj5j/jJhuM6A81DgOL85fRJUZp
-        +3res9uqWbsVwc3E8yRPenLe877v85yb/niPgYGBgYGBgYHhPmD9ZtsKXlJ2EB7mRHVckNTPcgtKvhLM
-        yjUhX/2EF9W3eVHxGPPV9QZD90N62l8Rx2/Uckn+Hl5ShwVRuWCUlc8FszrBSZaLgqScJTW7SY1tnGxL
-        1nMWjThO1opIw/O8rPxOGoDJbA1uKa3zVzW2QsMr+6GuuQvsruZg3nanH+PIXNl6kwg6mlNgTUUSc31G
-        s/VGKP701jK/xdkYqH65HWr2dtD8Aq163ihrNG6Sld/I7ztoBjXclrJAZIvaapOsTmLB54qd/q6+Qbjw
-        8UX47voMzM3NReTU9Jcwdu48uDw+IGKCIcG4rm3qCI6ceReuTF6D2dnZiPlff/MtvPfBR9B2aACe3eag
-        F2Iya1NC4Y4ndFmxg9y4GQt4O3thZub7iA3vxgkitPVgP7T3DMDVqemIZ+5GvKimjsP0AlCLLuveIJ/t
-        Rd6s3Fjd6PZgMt56pAb3g9gbNaCWHEn7gaxrdZnRQQzsx6Sko+00+b9gIKQFtekyo2MpDRx/cxSGTp6K
-        GIuFD9yAo+FVykixWMgMMAPMADPADDADzMD/2oCnoxe8vr6IsVj4wA0slktq4IsrkzBydhxwMsMx0uZq
-        BnXXXrDXtYC7pRu6jwzB6LlxuDwxeYcQJE5hlyauhmtgDuZiDayFNXEfa+AwhDlLYgDHw2LHbrqm3FQC
-        WVoFrC3fBakV1ZBmr4JstQKEAmv4zFa7G14fGKamLxMe6j8BW0pd4bix0Epz0sr0GmVVkIU1SO3QmRec
-        e6hJXC/KADLdVgmrWj2QMNQNhrE+MJy6k3FjvbD8eBc9l0bMGeXbuZRkWMe9lW1eWD4YvQbuJwySGvua
-        IIP0DOX/IwPxb/XAmoZ6SOz30aaPdTaT0W43pDprYJ3qCGQ8b5/PLLLNZxYj7f50pTyw1lENa+rrYcXB
-        fbDsxAF43PsS5bLhA/CorwWerHXBOs0RwJycQs3PmbUAMqfQ6s/YXjr/1M7KYIrLDate80DigA+SjnVS
-        DfEnexZuIOlIO6S43ZC9uST8XEJiv/KSOo1vOvQdR1RHKembjuV9TlQv8aLlFzy7st0bvln8KrjHycpN
-        Ll/5UM95g9Trp5SUIcLThJ+SMz+G+uVs0vwprjqqRe9/bwNEXE+oACept6g42VJjylczozxY/Q02my2e
-        GLmVVloZTO5tg+S+NvI/qQxykvITCcf0xoNPOqR/Kek9wsvqzyE9qE0/Eh3EZYkgWq7zslK5YcPORH17
-        QTBKigO/VqgxrjlZLdfDC0J6UVGCIGoVpM4M+cqavv3vIyvP8jARnsfnWzemP1P0iL7NwMDAwMDA8CcM
-        hj8AF6rwCM854KAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAABFxJREFUaEPtWG1MW1UYLpKMEdDplmg2TBiOz3tvy49FnYx7b2FfMF3vvWWlUAoD
+        LIUNHS3o5KuwDxxsGSQDs2BmDLBlW2JkJiYuUWPmP+MmG4zoDzUOA4vzl9ElRmn7et6z26pZuxXBzcTz
+        JE96ct7zvu/znJv+eI+BgYGBgYGBgeE+YP1m2wpeUnYQHuZEdVyQ1M9yC0q+EszKNSFf/YQX1bd5UfEY
+        89X1BkP3Q3raXxHHb9RySf4eXlKHBVG5YJSVzwWzOsFJlouCpJwlNbtJjW2cbEvWcxaNOE7WikjD87ys
+        /E4agMlsDW4prfNXNbZCwyv7oa65C+yu5mDedqcf48hc2XqTCDqaU2BNRRJzfUaz9UYo/vTWMr/F2Rio
+        frkdavZ20PwCrXreKGs0bpKV38jvO2gGNdyWskBki9pqk6xOYsHnip3+rr5BuPDxRfju+gzMzc1F5NT0
+        lzB27jy4PD4gYoIhwbiubeoIjpx5F65MXoPZ2dmI+V9/8y2898FH0HZoAJ7d5qAXYjJrU0Lhjid0WbGD
+        3LgZC3g7e2Fm5vuIDe/GCSK09WA/tPcMwNWp6Yhn7ka8qKaOw/QCUIsu694gn+1F3qzcWN3o9mAy3nqk
+        BveD2Bs1oJYcSfuBrGt1mdFBDOzHpKSj7TT5v2AgpAW16TKjYykNHH9zFIZOnooYi4UP3ICj4VXKSLFY
+        yAwwA8wAM8AMMAPMwP/agKejF7y+voixWPjADSyWS2rgiyuTMHJ2HHAywzHS5moGdddesNe1gLulG7qP
+        DMHouXG4PDF5hxAkTmGXJq6Ga2AO5mINrIU1cR9r4DCEOUtiAMfDYsduuqbcVAJZWgWsLd8FqRXVkGav
+        gmy1AoQCa/jMVrsbXh8YpqYvEx7qPwFbSl3huLHQSnPSyvQaZVWQhTVI7dCZF5x7qElcL8oAMt1WCata
+        PZAw1A2GsT4wnLqTcWO9sPx4Fz2XRswZ5du5lGRYx72VbV5YPhi9Bu4nDJIa+5ogg/QM5f8jA/Fv9cCa
+        hnpI7PfRpo91NpPRbjekOmtgneoIZDxvn88sss1nFiPt/nSlPLDWUQ1r6uthxcF9sOzEAXjc+xLlsuED
+        8KivBZ6sdcE6zRHAnJxCzc+ZtQAyp9Dqz9heOv/UzspgissNq17zQOKAD5KOdVIN8Sd7Fm4g6Ug7pLjd
+        kL25JPxcQmK/8pI6jW869B1HVEcp6ZuO5X1OVC/xouUXPLuy3Ru+WfwquMfJyk0uX/lQz3mD1OunlJQh
+        wtOEn5IzP4b65WzS/CmuOqpF739vA0RcT6gAJ6m3qDjZUmPKVzOjPFj9DTabLZ4YuZVWWhlM7m2D5L42
+        8j+pDHKS8hMJx/TGg086pH8p6T3Cy+rPIT2oTT8SHcRliSBarvOyUrlhw85EfXtBMEqKA79WqDGuOVkt
+        18MLQnpRUYIgahWkzgz5ypq+/e8jK8/yMBGex+dbN6Y/U/SIvs3AwMDAwMDwJwyGPwAXqvAIzzngoAAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnUsuarios.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAPwSURBVGhD7ZZfbBN1HMCngo9ExAcTfSExMQoPwBOJIUTx
-        Qdd2BgRNIIQneDBixmTs2j10T0ZipH+CQUiARMWMGSMBsu7utt16V2p7V3u3OSS4gRh0ZNzdsu56E5Il
-        P3+/7textV/HznYQkt8n+aRL+k3u8+t+d79rYDAYDAaDMR+EnvLHhL2+iPhzICLeKxnj0/6osJt8R6ce
-        DwgHpEznTdkutsn2dItsTb1Ovyqxq6vrGV9U/D4QExGkPyZ+S2boeImgoa5vN7SWkKEG243cW8u2SGVy
-        crViu31YtNDiMbIwMuOPihwUPl9/XGwls2GEng7pajxkaGihan9Y158jM3VFsZ0L1fGzypZ7cFe461kc
-        aFcGV8ubW8PSiqChfVodT81rP9LL1of0+D+vQOFlk6ZzqykmboSDq208zm8IGdm/wXhqu5FZSy9fOynT
-        bYLC57v7tPI2FAu586z0DhS9QF3z0cvXTmpiegsUXTZpO+6eU9LLUCzkdjzL5bP3wfCyg7nN9PK1k0No
-        Jb4HbkPx1G/InD/Ki1BwhT1kNpjXOsHwWf8IS9IKMlc3ZNPZpljOvcr4pOXckMaLL5KZxojwmi8mTAHR
-        s0bEQlOk71UyG9LTL3FG9hYQPx3Mq1vJTN25Yjvr8RPnXNIqjiZNdxj//UV6cvJ5+nUJ/7HeTTj0WmW8
-        L8JfbYzwG+hYiXAu9wKO/RI/kYY5PTuKP78L5jMLzpbHAjmsmuIivqmFtkC09wg+hbdVHmCPnGyhsEaZ
-        KHKyVZRL94Pp3FQs95JsFvdKCHnerwdyuZVcXtvHGepl/HkTP/tvB3UtiZ8+bdzQ0Go6Vh+UCTeAt4xd
-        uf/nNN3BxB1nHZn1xXu34C1zxhcTR7D3qSP4v3A6EOffIDNHsso6HPwrsP9n1TULL6qRzNYMice/9gwY
-        Tv1hrIA+Gx6b2XGiT6nc+1UeF+T3+MTMRxkZjn/gTGhQfZdm/D/I+8+ivzz2pztTqGNoDO08JcPBkCcE
-        FOjuRgezKSh8TnyDj4czmVU0xztJu9gKRZeVTBcdHTHRh2dTcOhinuTRdrEbcboKxs+pq800xzuy7fZD
-        4WXP/VVAH/NX4cCl2JlA+9MDcPicKk9zvEOe91B42egNC+34egCOW4pfCeiD/h4g+oGcof1Oc7xD3jKh
-        cOKA5aJ27U84zIsXEyi4yDYipzXN8c5iCxDvOuiQdB2O8mJXArX+kgXjicu2AMF00Cfib3CUF88/6QvA
-        NzJbwH/BFrAUl3MB+G2zGcd2QAp3naMtPYOjYJQH3+/kRw/nMp/jN9EOyJpO4oeB3/eboShvCssX+DDY
-        AkqyBTAYDAaD8aTS0PAvz8IP5eD8tRgAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAA/BJREFUaEPtll9sE3UcwKeCj0TEBxN9ITExCg/AE4khRPFB13YGBE0ghCd4MGLG
+        ZOzaPXRPRmKkf4JBSIBExYwZIwGy7u623XpXantXe7c5JLiBGHRk3N2y7noTkiU/f7/u17G1X8fOdhCS
+        3yf5pEv6Te7z6353v2tgMBgMBoMxH4Se8seEvb6I+HMgIt4rGePT/qiwm3xHpx4PCAekTOdN2S62yfZ0
+        i2xNvU6/KrGrq+sZX1T8PhATEaQ/Jn5LZuh4iaChrm83tJaQoQbbjdxby7ZIZXJytWK7fVi00OIxsjAy
+        44+KHBQ+X39cbCWzYYSeDulqPGRoaKFqf1jXnyMzdUWxnQvV8bPKlntwV7jrWRxoVwZXy5tbw9KKoKF9
+        Wh1PzWs/0svWh/T4P69A4WWTpnOrKSZuhIOrbTzObwgZ2b/BeGq7kVlLL187KdNtgsLnu/u08jYUC7nz
+        rPQOFL1AXfPRy9dOamJ6CxRdNmk77p5T0stQLOR2PMvls/fB8LKDuc308rWTQ2glvgduQ/HUb8icP8qL
+        UHCFPWQ2mNc6wfBZ/whL0goyVzdk09mmWM69yvik5dyQxosvkpnGiPCaLyZMAdGzRsRCU6TvVTIb0tMv
+        cUb2FhA/HcyrW8lM3bliO+vxE+dc0iqOJk13GP/9RXpy8nn6dQn/sd5NOPRaZbwvwl9tjPAb6FiJcC73
+        Ao79Ej+Rhjk9O4o/vwvmMwvOlscCOaya4iK+qYW2QLT3CD6Ft1UeYI+cbKGwRpkocrJVlEv3g+ncVCz3
+        kmwW90oIed6vB3K5lVxe28cZ6mX8eRM/+28HdS2Jnz5t3NDQajpWH5QJN4C3jF25/+c03cHEHWcdmfXF
+        e7fgLXPGFxNHsPepI/i/cDoQ598gM0eyyjoc/Cuw/2fVNQsvqpHM1gyJx7/2DBhO/WGsgD4bHpvZcaJP
+        qdz7VR4X5Pf4xMxHGRmOf+BMaFB9l2b8P8j7z6K/PPanO1OoY2gM7Twlw8GQJwQU6O5GB7MpKHxOfIOP
+        hzOZVTTHO0m72ApFl5VMFx0dMdGHZ1Nw6GKe5NF2sRtxugrGz6mrzTTHO7Lt9kPhZc/9VUAf81fhwKXY
+        mUD70wNw+JwqT3O8Q573UHjZ6A0L7fh6AI5bil8J6IP+HiD6gZyh/U5zvEPeMqFw4oDlonbtTzjMixcT
+        KLjINiKnNc3xzmILEO866JB0HY7yYlcCtf6SBeOJy7YAwXTQJ+JvcJQXzz/pC8A3MlvAf8EWsBSXcwH4
+        bbMZx3ZACnedoy09g6NglAff7+RHD+cyn+M30Q7Imk7ih4Hf95uhKG8Kyxf4MNgCSrIFMBgMBoPxpNLQ
+        8C/Pwg/l4Py1GAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
