--- a/ProyectoFinal/GUI/MenuCliente.resx
+++ b/ProyectoFinal/GUI/MenuCliente.resx
@@ -120,50 +120,50 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAARqSURBVEhLtZR9TNVVGMfPffvdexUUQV5cKDjBkZorsqUMS00TRWEgeNF7UUJIJSjLYaCimPoH
-        FUsKypn5UqLlbMvlylz+4YpmIo5NpymraQ6dr5hmirx8eu69ZzrDUNr6bGfn3t95nu/3Oc/5/Y763yG/
-        YBj5RacoKYOVb9E5v4iOeQXftWXnmXTII9OUk//kiTm5Hx71zDnZOMtz4rAnu04x/9XL7N8NDd9D3R6o
-        30/Hxo9oy3/lVmt23jid2y2n3blFTbM8539fUMj1yne5s2MzHK3j3IpSFB+sg282webVsL4camQntTXw
-        9Re0FS7iZtbc5VqnC82u7HFnXO7zVxaX0PHxVti1Ez6R4sqXcNY98/jByVNiFcWvi2AFbPIarITq5fDO
-        Eqgsga+2cqeklBvps3Zfz/SYta6Pc+mZP17JX0jn+g2wZQcsk8JycrjscnF4UlKeDpMzSHGVUy2LG6X6
-        6mWw7k2oWAxrXoPlL8NnNbRXVHB9+oxmb/yl6TPGXE5zcatM4rdLxYskfqYHMlz8lpxywCf6T0jN2MBq
-        EayWqitFfK38XlUoVYnB4nnwdhnta9dwdWr6hZYMt7RBelz5HmTK73Q3t5PTOP5CUrGWezBMTE3Ak3WE
-        FQViIOIrFkCJiL/xEhRky7xQdint+FzaUSgFzMiSyt3cSkrl1PgXp2mZh0PCpGzcGbBUxEtzpQVzRVBG
-        +hRITYYJ4yEmVsZQLgaGUG9xDNapPaM1PuF9EkbC6KEQ+5gIDoQomSMjISyCC85AjjkCh+nw/8YfynKO
-        aRPh2cdhiFd8AIRHQEgofzkCaLQ79+rQnnNTWU53pkyGBZkiHg7RIh4pc1gYBIVAv2AuWRzUm4xVOuXR
-        ua1s25kqvV4k4nEiGitVR8sIF2GfQTD0kREQTJOy8JOyjdKpD6ddWco7YqXvZTnwhIgPl8q9BpEhXDAZ
-        zXfsjlb6BkFgP+glsxHAD8p6Tad3T6eyxtNHEquK5XDlUJ+SvnsNYiK46bBzVtkdJ5Ut8k+z3W/g7Av2
-        PsiO2ausVVrm30FZ/dfF2MFiMAji5Y0ZIQahATQro0iHqWPKiGozGXcNcPTliOTuUdZndEhXUKYGlsrH
-        lDEKEsVgTJTfQM6gRdnqddhdGpVttrdyr7jPxGywS1kP6eX7Qdk9JE2A4nSYJP0fO8RvMGogbUG9uaSM
-        QB16HweVkdXhNbGLSUAQJ5WZL5Wl6y5Qtp9ZJ7dqchxMluE1SBCD4RFcUbaVOuyBHFJGreT7DJBz2qbM
-        3+qlexAlgktSYPpwSJKPymuQGE1rb2eLDumWX5TlV59B//40itw2Zemnl/wwKBrc8XLXjPAbPC8GcWHc
-        UMZsHdIt+5Q1+qK0x2vQ4rSxVVnceskPRuAOXE9Dmtw9U4fBc0NoNRsNevmROKBsVTidco30Zosy1erH
-        92BA6BkSY2DkQNodvfbpxz3ilDJdIzqcTcrU5a3zIR/aaHkrYvTfHrNTmSdctRvSItOn/idK/Q14M8X2
-        mJrjpAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAABGpJREFUSEu1
+        lH1M1VUYx899+917FRRBXlwoOMGRmiuypQxLTRNFYSB40XtRQkglKMthoKKY+gcVSwrKmflSouVsy+XK
+        XP7himYijk2nKatpDp2vmGaKvHx67r1nOsNQ2vpsZ+fe33me7/c5z/n9jvrfIb9gGPlFpygpg5Vv0Tm/
+        iI55Bd+1ZeeZdMgj05ST/+SJObkfHvXMOdk4y3PisCe7TjH/1cvs3w0N30PdHqjfT8fGj2jLf+VWa3be
+        OJ3bLafduUVNszznf19QyPXKd7mzYzMcrePcilIUH6yDbzbB5tWwvhxqZCe1NfD1F7QVLuJm1tzlWqcL
+        za7scWdc7vNXFpfQ8fFW2LUTPpHiypdw1j3z+MHJU2IVxa+LYAVs8hqshOrl8M4SqCyBr7Zyp6SUG+mz
+        dl/P9Ji1ro9z6Zk/XslfSOf6DbBlByyTwnJyuOxycXhSUp4OkzNIcZVTLYsbpfrqZbDuTahYDGteg+Uv
+        w2c1tFdUcH36jGZv/KXpM8ZcTnNxq0zit0vFiyR+pgcyXPyWnHLAJ/pPSM3YwGoRrJaqK0V8rfxeVShV
+        icHiefB2Ge1r13B1avqFlgy3tEF6XPkeZMrvdDe3k9M4/kJSsZZ7MExMTcCTdYQVBWIg4isWQImIv/ES
+        FGTLvFB2Ke34XNpRKAXMyJLK3dxKSuXU+BenaZmHQ8KkbNwZsFTES3OlBXNFUEb6FEhNhgnjISZWxlAu
+        BoZQb3EM1qk9ozU+4X0SRsLooRD7mAgOhCiZIyMhLIILzkCOOQKH6fD/xh/Kco5pE+HZx2GIV3wAhEdA
+        SCh/OQJotDv36tCec1NZTnemTIYFmSIeDtEiHilzWBgEhUC/YC5ZHNSbjFU65dG5rWzbmSq9XiTicSIa
+        K1VHywgXYZ9BMPSRERBMk7Lwk7KN0qkPp11Zyjtipe9lOfCEiA+Xyr0GkSFcMBnNd+yOVvoGQWA/6CWz
+        EcAPynpNp3dPp7LG00cSq4rlcOVQn5K+ew1iIrjpsHNW2R0nlS3yT7Pdb+DsC/Y+yI7Zq6xVWubfQVn9
+        18XYwWIwCOLljRkhBqEBNCujSIepY8qIajMZdw1w9OWI5O5R1md0SFdQpgaWyseUMQoSxWBMlN9AzqBF
+        2ep12F0alW22t3KvuM/EbLBLWQ/p5ftB2T0kTYDidJgk/R87xG8waiBtQb25pIxAHXofB5WR1eE1sYtJ
+        QBAnlZkvlaXrLlC2n1knt2pyHEyW4TVIEIPhEVxRtpU67IEcUkat5PsMkHPapszf6qV7ECWCS1Jg+nBI
+        ko/Ka5AYTWtvZ4sO6ZZflOVXn0H//jSK3DZl6aeX/DAoGtzxcteM8Bs8LwZxYdxQxmwd0i37lDX6orTH
+        a9DitLFVWdx6yQ9G4A5cT0Oa3D1Th8FzQ2g1Gw16+ZE4oGxVOJ1yjfRmizLV6sf3YEDoGRJjYORA2h29
+        9unHPeKUMl0jOpxNytTlrfMhH9poeSti9N8es1OZJ1y1G9Ii06f+J0r9DXgzxfaYmuOkAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="btnAceptar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAZCAYAAABQDyyRAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAPbSURBVEhLvZXbT1NZFIf3OFw6E4o4xjH6SBM1gBqEhGIM
-        EAI2gtqKgBfEIp5eoAhIiyAChWJoIlhQCaiTaDLOy4jSUsqlXESKeI2ZTMJ51QfT8OIfIOnDcu19DpVU
-        UIy0v+RLk9O99vdbbdKSkERNYlI6U/6TaCVp4pMQBuXZfdnz3W+7ocJZsRDaEijP6sua73zTCR2vO+Da
-        62ugd+gXJGWSdPFEEEPlvVnz1ldWsL60QvvLdj+cnVuI1EVmiCeDEJRn9GTwbS/awPLcAq3PWxktcy0M
-        85wZSgZKglQC5Wm30vjmuWZoetbEaHzWCFdmr/hpmG2Ay57LIO+W94hT6xSU77+5n6/31MMSdZ46uDRz
-        iVE7U8swPTWBqk7VJU4FxEw2SKukNaSARIhP1pYysin1ZipPLzdOGxk10zWMi08uQvWTaj/KBuUqm6N8
-        h2WH0zhl/LS3fe/smkugXN4l5+nlVVNVUDlV6efC5AWomKxgGCYMoGxU3hWnAiLIXdWT1YumaRPgqy/e
-        Gu/5bgmUJ9uSecOkgQnKJ8qhbKKMoR/XM3TjOtC6tZDblHtfnAoIymVmmcswblhcvkW5u9wXZ41bvQTK
-        k2xJ/JJA49YwuDGOcX7sPJSOlcK50XOQY875R5wKCJW3yIZ1Y7pFtgWytAVtz41yvp3tO78ugfLErkSe
-        CkpHBUnJaAmoR9RwduSsn+LhYjhkOfQQJ34RBgOyrX7bA2y7SLdYvgnn/rKB2qX2ydpkX0qgfI9tD88E
-        I8VwZvgMo8hVBKddp+GU6xTj5NBJUFxV2HFiA5tbKeH68ITMe5leton4ca20TdFQkS/WEushevLn7uu7
-        eSpisiFBdGLoBBQ6C6HAWQAquwoO9h8EeaPcgYpfBdM3Qkuk3033fm+bQkehL/V26kcqyXfmM44PHoc8
-        Rx5k/psJiX8nQuxfsbC9bzvEaGL68eowwbCG0BIH7hzw0k2Wb5M/iCKEiQbz4JjjGKgcKlDalUwady8O
-        tvZuhc09m/1INVK6ebhw8w+Elki5k+KlGy0XUY7aj8KRgSOQ8zgHkh4kMWnUjaivwL/bYbxqbb8fK4WW
-        SO5L9h4eOAy5j3OZkKJ4pICE+wkgvSGFCFvEioTpwtx4RaRw00+EltjXu8+r6FdA9sNsJpZ0SYB0kNXR
-        kikc/U24YR1CS+yy7foQbYsGYkXBt9CQGRz5XZhcz3AkntSTd+QqSlZDS+bwZJQwEIzQErXkPWlFWSAa
-        8gpPRAsHgxlawoQlmlG6BEfeko0kRjwRgtASRizRwOT/495/iO+EMLREJfHgN75FfPKTIeQzNpyKYToB
-        //QAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAZCAYAAABQDyyRAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAA9tJREFUSEu9ldtPU1kUh/c4XDoTijjGMfpIEzWAGoSEYgwQAjaC2oqAF8Qinl6g
+        CEiLIAKFYmgiWFAJqJNoMs7LiNJSyqVcRIp4jZlMwnnVB9Pw4h8g6cNy7X0OlVRQjLS/5EuT073291tt
+        0pKQRE1iUjpT/pNoJWnikxAG5dl92fPdb7uhwlmxENoSKM/qy5rvfNMJHa874Nrra6B36BckZZJ08UQQ
+        Q+W9WfPWV1awvrRC+8t2P5ydW4jURWaIJ4MQlGf0ZPBtL9rA8twCrc9bGS1zLQzznBlKBkqCVALlabfS
+        +Oa5Zmh61sRofNYIV2av+GmYbYDLnssg75b3iFPrFJTvv7mfr/fUwxJ1njq4NHOJUTtTyzA9NYGqTtUl
+        TgXETDZIq6Q1pIBEiE/WljKyKfVmKk8vN04bGTXTNYyLTy5C9ZNqP8oG5Sqbo3yHZYfTOGX8tLd97+ya
+        S6Bc3iXn6eVVU1VQOVXp58LkBaiYrGAYJgygbFTeFacCIshd1ZPVi6ZpE+CrL94a7/luCZQn25J5w6SB
+        CconyqFsooyhH9czdOM60Lq1kNuUe1+cCgjKZWaZyzBuWFy+Rbm73BdnjVu9BMqTbEn8kkDj1jC4MY5x
+        fuw8lI6VwrnRc5BjzvlHnAoIlbfIhnVjukW2BbK0BW3PjXK+ne07vy6B8sSuRJ4KSkcFScloCahH1HB2
+        5Kyf4uFiOGQ59BAnfhEGA7KtftsDbLtIt1i+Cef+soHapfbJ2mRfSqB8j20PzwQjxXBm+AyjyFUEp12n
+        4ZTrFOPk0ElQXFXYcWIDm1sp4frwhMx7mV62ifhxrbRN0VCRL9YS6yF68ufu67t5KmKyIUF0YugEFDoL
+        ocBZACq7Cg72HwR5o9yBil8F0zdCS6TfTfd+b5tCR6Ev9XbqRyrJd+Yzjg8ehzxHHmT+mwmJfydC7F+x
+        sL1vO8RoYvrx6jDBsIbQEgfuHPDSTZZvkz+IIoSJBvPgmOMYqBwqUNqVTBp3Lw629m6FzT2b/Ug1Urp5
+        uHDzD4SWSLmT4qUbLRdRjtqPwpGBI5DzOAeSHiQxadSNqK/Av9thvGptvx8rhZZI7kv2Hh44DLmPc5mQ
+        onikgIT7CSC9IYUIW8SKhOnC3HhFpHDTT4SW2Ne7z6voV0D2w2wmlnRJgHSQ1dGSKRz9TbhhHUJL7LLt
+        +hBtiwZiRcG30JAZHPldmFzPcCSe1JN35CpKVkNL5vBklDAQjNASteQ9aUVZIBryCk9ECweDGVrChCWa
+        UboER96SjSRGPBGC0BJGLNHA5P/j3n+I74QwtEQl8eA3vkV88pMh5DM2nIphOgH/9AAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
